fix(Navbar): z-index to stick it on top of all other element and modify the padding

--- a/src/js/components/common/Navbar.styl
+++ b/src/js/components/common/Navbar.styl
@@ -34,9 +34,10 @@
             transition: all 0.35s ease
 
 .navbarWarpper
+    padding: 12px !important
     position: fixed
     top: 0
-    z-index: 99
+    z-index: 100
     box-shadow: 0px 1px 5px #50514F
 .navbar
     a
