--- a/src/js/components/pages/dashboard/Base.styl
+++ b/src/js/components/pages/dashboard/Base.styl
@@ -6,7 +6,7 @@
         display: flex
         justify-content: center
         width: 250px
-        z-index: 100
+        z-index: 99
         padding: 0px
         cursor: pointer
         button
